kubernetes/ingress/ingressrules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-external-config
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gateway.qualix.ai
      secretName: qualix-tls
  rules:
    - host: "gateway.qualix.ai"
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: qualix-api-gateway
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
      - ip: 20.207.82.4
